If it's hacky and you know it clap you hands (clap clap)!